<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Charitymaps</string>
    <string name="action_settings">Settings</string>
    <string name="select_map">Select map type</string>
    <string name="normal_map">Normal map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="share">Share</string>

    <color name="bg">#333333</color>
    <color name="red">#ff4444</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="blue">#33b5e5</color>
    <color name="grey">#999999</color>

    <string name="img_line">gekleurde lijn</string>
    <string name="home_groep">Charity Maps (Groep C4)</string>
    <string name="home_naam">Goed doel</string>
    <string name="home_app">APP</string>
    <string name="home_versie">v0.1</string>
    <string name="home_project">Informatica - project 4</string>
    <string name="home_button">Ga verder</string>
    <string name="intro_welkom">Welkom!</string>
    <string name="intro_intro">Welkom bij de App van de goede doelen.</string>
    <string name="intro_maps">Ga naar de Maps</string>
    <string name="intro_database">Rampen</string>
    <string name="intro_overzicht">Laatste nieuws</string>
    <string name="intro_charity">Stichtingen</string>
    <string name="rss_item_description">Description</string>
    <string name="rss_item_date">Date</string>
    <string name="rss_item_title">Title</string>
    <string name="database_date">Date</string>
    <string name="database_location">Location</string>
    <string name="titel">Titel</string>
    <string name="locatie">Locatie</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="loading">Loading&#8230;</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_internet">Geen internet verbinding</string>

    <string-array name="main_menu_items">
        <item>De Kaart</item>
        <item>Rampen</item>
        <item>Laatste Nieuws</item>
        <item>Stichtingen</item>
    </string-array>

</resources>