<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Head" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/img_line"
        android:src="@drawable/line" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/home_project"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtvVersion"
        android:layout_alignRight="@+id/txtvVersion"
        android:layout_centerVertical="true"
        android:background="@color/blue"
        android:text="@string/intro_maps" />

    <TextView
        android:id="@+id/txtvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_maps"
        android:layout_centerHorizontal="true"
        android:text="@string/intro_intro"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtvVersion"
        android:layout_centerHorizontal="true"
        android:text="@string/intro_welkom"
        android:textColor="@color/blue"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/button_maps"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:text="@string/intro_database" />

    <Button
        android:id="@+id/button_overzicht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/button_database"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:text="@string/intro_overzicht" />

</RelativeLayout>